Fixed layout issues

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -39,6 +39,7 @@ h2 {
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
+    max-width: 450px;
 }
 
 .chatbot-container--primary {
@@ -159,10 +160,12 @@ textarea::-webkit-scrollbar-thumb {
 textarea::-webkit-scrollbar-thumb:hover {
     background: #555; /* Color of the handle on hover */
 }
+
 /* Scrollbar Track when it's empty and not clickable */
 textarea::-webkit-scrollbar-track {
     background: transparent; /* Track color */
 }
+
 /* Scrollbar corner */
 textarea::-webkit-scrollbar-corner {
     background: transparent; /* Color of the scrollbar corner */
